--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-type-animation": "^3.2.0",
     "sweetalert": "^2.1.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
